--- a/src/Plugins/SmartStore.Shipping/SmartStore.Shipping.csproj
+++ b/src/Plugins/SmartStore.Shipping/SmartStore.Shipping.csproj
@@ -132,7 +132,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="Telerik.Web.Mvc">
-      <HintPath>..\..\packages\TelerikMvcExtensions.2012.2.607\lib\net40\Telerik.Web.Mvc.dll</HintPath>
+      <HintPath>..\..\..\lib\Telerik\Telerik.Web.Mvc.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
