Theme inheritance (part 2)

--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -72,6 +72,8 @@
     <add key="sm:EnableDynamicDiscovery" value="true" />
     <add key="sm:EngineType" value="" />
     <add key="sm:ThemesBasePath" value="~/Themes/" />
+    <!-- Monitor all theme folders for file changes/creations/deletions. Only turn this off when you encounter problems on the production webserver -->
+    <add key="sm:MonitorThemesFolder" value="true" />
     <!-- add custom Area paths separated with comma (e.g.: "~/Plugins/, ~/Areas/") -->
     <add key="sm:AreaBasePaths" value="~/Plugins/" />
     <!-- set this to "true", if the view engine should also try to resolve view files ending with {CurrentLanguage} (e.g.: MyView.de.cshtml > MyView.cshtml)  -->
