--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -83,7 +83,7 @@
     <add key="sm:PluginsIgnoredDuringInstallation" value="SmartStore.DemoShopControlling, SmartStore.WebApi, SmartStore.Glimpse, SmartStore.DevTools" />
   </appSettings>
   
-  <location path="Plugins/ImportBiz">
+  <location path="Plugins/SmartStore.BizImporter">
     <system.web>
       <httpRuntime maxRequestLength="1536000" executionTimeout="14400" maxQueryStringLength="16384" />
     </system.web>
