Perf: drastically increased performance of DeleteGuestCustomers() method by using barebones DbContext

--- a/src/Libraries/SmartStore.Services/app.config
+++ b/src/Libraries/SmartStore.Services/app.config
@@ -1,20 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="SmartStore.Services.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <applicationSettings>
-      <SmartStore.Services.Properties.Settings>
-        <setting name="SmartStore_Services_EuropaCheckVatService_checkVatService" serializeAs="String">
-          <value>http://ec.europa.eu/taxation_customs/vies/services/checkVatService</value>
-        </setting>
-        <setting name="SmartStore_Services_EuropaCheckVatService_checkVatService" serializeAs="String">
-          <value>http://ec.europa.eu/taxation_customs/vies/services/checkVatService</value>
-        </setting>
-      </SmartStore.Services.Properties.Settings>
-    </applicationSettings>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="SmartStore.Services.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <applicationSettings>
+    <SmartStore.Services.Properties.Settings>
+      <setting name="SmartStore_Services_EuropaCheckVatService_checkVatService" serializeAs="String">
+        <value>http://ec.europa.eu/taxation_customs/vies/services/checkVatService</value>
+      </setting>
+      <setting name="SmartStore_Services_EuropaCheckVatService_checkVatService" serializeAs="String">
+        <value>http://ec.europa.eu/taxation_customs/vies/services/checkVatService</value>
+      </setting>
+    </SmartStore.Services.Properties.Settings>
+  </applicationSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -31,4 +33,10 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
