--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -3,7 +3,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <sectionGroup name="bundleTransformer">
+    <sectionGroup name="bundleTransformer"> 
       <section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" />
       <section name="microsoftAjax" type="BundleTransformer.MicrosoftAjax.Configuration.MicrosoftAjaxSettings, BundleTransformer.MicrosoftAjax" />
       <section name="less" type="BundleTransformer.Less.Configuration.LessSettings, BundleTransformer.Less" />
@@ -100,7 +100,7 @@
     <customErrors mode="RemoteOnly" />
     <sessionState mode="InProc" />
     <trace enabled="true" localOnly="true" pageOutput="true" requestLimit="40" /> 
-    <compilation debug="true" targetFramework="4.5" batch="false" numRecompilesBeforeAppRestart="250" optimizeCompilations="true">
+    <compilation debug="true" targetFramework="4.5" batch="false" numRecompilesBeforeAppRestart="250" optimizeCompilations="false">
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
         <add assembly="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
