--- a/src/Libraries/SmartStore.Services/packages.config
+++ b/src/Libraries/SmartStore.Services/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.4.1" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
   <package id="EPPlus" version="3.1.3.3" targetFramework="net45" />
   <package id="fasterflect" version="2.1.3" targetFramework="net45" />
   <package id="ImageResizer" version="3.4.2" targetFramework="net45" />
