New theme variable to turn of the megamenu

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/theme.config
@@ -54,6 +54,7 @@
     <Var name="ShopBarLabel" type="Select#ShopBarLabels">label-info</Var>
     
     <!-- Megamenu -->
+    <Var name="DisplayNavbar" type="Boolean">true</Var>
     <Var name="InverseNavbar" type="Boolean">false</Var>
     <Var name="NavbarHeight" type="String">38px</Var>
     <Var name="NavbarBackgroundHighlight" type="Color">#fff</Var>
